--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20260213.0",
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
